# cls-16

./: .gitignore  Cargo.toml  README.md  ctest.c  test.c  test.s
clscc/: Cargo.toml
clscc/src/: main.rs
clscc/src/lexer/: gen.rs  mod.rs
clscc/src/parser/: gen.rs  mod.rs
examples/: test1.s
src/: lib.rs  main.rs
src/asm/: assembler.rs  lexer.rs  mod.rs
src/c/: mod.rs
src/c/compiler/: mod.rs  ssa.rs  var.rs
src/c/compiler/ast/expr/: constant.rs  ident.rs  infix.rs  mod.rs  unary.rs
src/c/compiler/ast/expr/postfix/: call.rs  index.rs  mod.rs
src/c/compiler/ast/statement/: builtin.rs  iteration.rs  jump.rs  mod.rs  selection.rs
src/c/compiler/optimizers/: block_level.rs  function_level.rs  mod.rs
src/c/lexer/: gen.rs  mod.rs
src/c/parser/: ast.rs  gen.rs  mod.rs
src/clscc/: common.rs  mod.rs
src/clscc/cg/: mod.rs
src/clscc/cg/cg_arch/: arith.rs  boolean.rs  branch.rs  call.rs  mem.rs  mod.rs
src/clscc/cg/cg_ast/: binary.rs  branch.rs  call.rs  mem.rs  mod.rs
src/clscc/lexer/: gen.rs  mod.rs
src/clscc/parser/: gen.rs  mod.rs
src/comp/: mod.rs
src/emu/: alu.rs  debugger.rs  emulator.rs  microcode.rs  mod.rs  ram.rs  registers.rs
src/plat/: mod.rs
src/spec/: mod.rs
