[package]
name = "cls16"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.0"
clap = { version = "4.4.2", features = ["derive"] }
easy-repl = "0.2.1"
log = "0.4.20"
nom = "7.1.3"
nom_locate = "4.2.0"
rustc-hash = "1.1.0"
rustyline = "12.0.0"
simplelog = "0.12.1"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["sync", "time", "full"] }
