[package]
name = "clscc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cls16 = { path = "../" }
nom = "7.1.3"
nom_locate = "4.2.0"
anyhow = "1.0.75"
thiserror = "1.0.48"
slab_tree = "0.3.2"
log = "0.4.20"
simplelog = "0.12.1"
